<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:hint="@string/name"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:hint="@string/password"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/passwordEditText"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/registrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="#0094cc"
                />

            <Button
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="8dp"
                android:id="@+id/signButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_in"
                android:textColor="@color/black"
                style="?attr/materialButtonOutlinedStyle"
                />
        </LinearLayout>


    </LinearLayout>
</layout>